# code-tanks

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  build.sh  code_tanks.drawio  docker-compose.yml  init.sh  ocypod.toml  up.sh
.devcontainer/: Dockerfile  devcontainer.json  rust.Dockerfile
.github/: dependabot.yml
.github/workflows/: build-dev.yml  build-release.yml  build.yml  ci-dev.yml  ci-release.yml  ci.yml  dev_container.yml  devcontainer.yml  examples.yml  release-desktop.yaml  release.yaml  rust-devcontainer.yml  test.yml
api/: Cargo.toml
api/src/: client_connection.rs  command_receiver.rs  event_sender.rs  lib.rs  position.rs  velocity.rs
apps/builder/: .dockerignore  Cargo.toml  Dockerfile
apps/builder/src/: db.rs  lib.rs  main.rs  test.rs
apps/game/: Cargo.toml  simulator.Dockerfile
apps/game/scripts/: run.sh
apps/game/src/: c_client.rs  c_collider.rs  c_command.rs  c_event.rs  c_health.rs  c_position.rs  c_render.rs  c_scanner.rs  c_tank.rs  c_velocity.rs  lib.rs  s_apply_commands.rs  s_physics.rs  s_publish_events.rs  s_render.rs  s_request_commands.rs  s_save_commands.rs
apps/game/tests/: commands.rs
apps/server/: Cargo.toml  Dockerfile
apps/server/lib/: Cargo.toml
apps/server/src/: db.rs  main.rs
apps/simulator/: Cargo.toml  Dockerfile  sim.ct
apps/simulator/src/: c_client.rs  c_command.rs  c_event.rs  c_position.rs  c_velocity.rs  client_connection.rs  command_receiver.rs  event_sender.rs  lib.rs  main.rs  render.rs  s_apply_commands.rs  s_physics.rs  s_publish_events.rs  s_render.rs  s_request_commands.rs  s_save_commands.rs
apps/simulator/tests/: commands.rs  do_nothing.ct
builder/: Dockerfile
builder/Dockerfiles/: dart.Dockerfile
builder/src/: lib.rs  main.rs  test.rs
cli/: Cargo.toml
cli/src/: main.rs
clients/dart/: Dockerfile  pubspec.yaml
clients/dart/examples/: do_nothing_tank.dart
clients/dart/test/: basic_commands_test.dart
core/: Cargo.toml
core/src/: client_connection.rs  collider.rs  command_receiver.rs  render.rs
desktop/: Cargo.toml  Dockerfile
desktop/src/: lib.rs  main.rs  s_capture.rs  s_setup_desktop_tanks.rs  s_setup_tanks.rs  s_update_health.rs
engine/: Cargo.toml
engine/src/: c_client.rs  c_health.rs  s_apply_history_transforms.rs  s_radar_physics.rs  s_request_commands.rs  s_request_commands_by_event.rs  s_save_commands.rs  s_setup_physics.rs  s_setup_walls.rs
examples/dart/: do_nothing.dart  forward_one.dart  forward_rotate.dart  rotate_one.dart  spin_bot.dart  test_rotate.dart  time_out.dart  up_down.dart
examples/go/: my_tank.go
examples/java/: MyTank.java
examples/javascript/: do_nothing.js
examples/python/: complex.py  crash.py  spin_bot.py
examples/rust/: spin_bot.rs
graphics/: Cargo.toml
graphics/src/: c_healthbar.rs  c_nametag.rs  c_particle.rs  lib.rs  s_on_added_bullet.rs  s_request_debug_commands.rs  s_setup_ground.rs  s_setup_reader_tanks.rs  s_spawn_tracks.rs  s_update_healthbar.rs  s_update_nametag.rs  s_update_radar.rs  s_update_tank.rs  s_update_tracks.rs
runner/: Cargo.toml
runner/src/: main.rs  my_tank.rs
runners/dart/: Dockerfile  pubspec.yaml
runners/dart/lib/: code_tanks.dart
scripts/: .env  _upload_tanks.sh  build.sh  build_all.sh  build_builder.sh  build_local.sh  build_server.sh  build_simulator.sh  build_web.sh  create_dart_starter.sh  create_dart_template.sh  env  get_build_log.sh  get_dart_starter.sh  get_log.sh  get_raw.sh  get_sim_log.sh  install_codetanks.sh  install_ctcli.sh  log.sh  run.sh  run_sim.sh  sim.sh  up_db.sh  upload.sh  upload_tank.sh  upload_tanks.sh
scripts/Dockerfiles/: dart.Dockerfile  go.Dockerfile  java.Dockerfile  js.Dockerfile  py.Dockerfile  rs.Dockerfile
scripts/dev/: build_all.sh  build_simulator.sh  build_web.sh  reset_db.sh  up_db.sh  viewer.sh
scripts/helper/: setup_host.sh
scripts/official/: get_build_log.sh  get_raw.sh  get_sim_log.sh  run_sim.sh  upload_tank.sh  upload_tanks.sh
scripts/test/: test_do_nothing.sh  test_examples.sh  test_forward_one.sh  test_rotate_one.sh  test_spin_bot.sh  test_timeout.sh
server/: .dockerignore  Cargo.toml  Dockerfile
server/lib/: Cargo.toml
server/src/: db.rs  lib.rs  main.rs  test.rs
simulator/: Cargo.toml  Dockerfile
simulator/src/: c_client.rs  c_collider.rs  c_command.rs  c_event.rs  c_healthbar.rs  c_position.rs  c_radar_needs_update.rs  c_scanner.rs  c_tank.rs  c_velocity.rs  core_plugin.rs  lib.rs  main.rs  s_apply_commands.rs  s_apply_history_transforms.rs  s_bullet_physics.rs  s_physics.rs  s_publish_events.rs  s_radar_physics.rs  s_render.rs  s_request_commands.rs  s_request_commands_by_event.rs  s_request_debug_commands.rs  s_save_commands.rs  s_setup_physics.rs  s_setup_sim_tanks.rs  s_setup_tanks.rs  s_setup_walls.rs  s_tank_physics.rs  s_walls.rs
simulator/tests/: commands.rs
simulator_graphics/: .dockerignore  Cargo.toml
simulator_graphics/src/: c_healthbar.rs  c_nametag.rs  c_tracks.rs  lib.rs  s_on_added_bullet.rs  s_request_debug_commands.rs  s_setup_graphics.rs  s_setup_ground.rs  s_spawn_tracks.rs  s_update_health.rs  s_update_healthbar.rs  s_update_nametag.rs  s_update_tracks.rs  test.rs
src/: main.rs
viewer/: Cargo.toml  Dockerfile
viewer/scripts/: run.sh
viewer/src/: lib.rs  main.rs  s_apply_history_transforms.rs  s_graphics.rs  s_load_tanks.rs  s_request_debug_commands.rs  s_setup_ground.rs  s_setup_web_tanks.rs  s_tanks.rs
viewer/web/: index.html
viewer/web/assets/sim/: .txt
web/: Dockerfile  main.py
web/web/: index.html
worker_builder/: Cargo.toml  Dockerfile
worker_builder/Dockerfiles/: dart.Dockerfile  py.Dockerfile  rs.Dockerfile
worker_builder/src/: db.rs  lib.rs  main.rs
worker_simulator/: Cargo.toml  Dockerfile
worker_simulator/scripts/: sim.sh
worker_simulator/src/: db.rs  lib.rs  main.rs  s_save_commands.rs  s_setup_sim_tanks.rs  test.rs
workers/: Cargo.toml  builder.Dockerfile  simulator.Dockerfile
workers/builder/: .dockerignore  Cargo.toml  Dockerfile
workers/simulator/: Cargo.toml  Dockerfile
workers/src/: db.rs  lib.rs
(+38 files in other folders)
