[package]
name = "ctdesktop"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
ctsimlibgraphics = { path = "../simulator_graphics" }
bevy = "0.10.0"

[[bin]]
name = "ctdesktop"
path = "src/main.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3