[package]
name = "ctdesktop"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
ctsimlibgraphics = { path = "../simulator_graphics" }
ct-api = { path = "../api" }
bevy = { version = "0.11.0", default-features = false, features = [ "x11" ] }
bevy_rapier2d = { version = "*", features = [ "debug-render-2d" ] }
regex = { version = "1.3", default-features = false, features = [ "std" ] }
serde_json = "1.0.85"

[[bin]]
name = "ctdesktop"
path = "src/main.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3