[package]
name = "ctgraphics"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
bevy = { version = "0.11.0", default-features = false, features = [ "png", "bevy_winit", "bevy_asset", "bevy_text", "bevy_render", "bevy_core_pipeline", "bevy_sprite" ] }
bevy_rapier2d = { version = "0.22.0", features = [ "enhanced-determinism" ] }
# bevy_prototype_lyon = "0.9.0"
ct-api = { path = "../api" }


[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3