[package]
name = "ctsimlib"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8.0"
bevy_rapier2d = { git = "https://github.com/code-tanks/bevy_rapier", version = "0.16.2", features = [ "debug-render", "enhanced-determinism", "wasm-bindgen" ] }

[[bin]]
name = "test"
path = "src/test.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3