[package]
name = "ctsimlib"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = { version = "0.17.0", features = [ "debug-render", "enhanced-determinism", "wasm-bindgen" ] }
serde = "1.0.144"
serde_json = "1.0.85"

[[bin]]
name = "test"
path = "src/test.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3