[package]
name = "ctsimlib"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9.1"
bevy_rapier2d = { version = "0.21.0", features = [ "debug-render-2d", "enhanced-determinism", "wasm-bindgen" ] }
serde = "1.0.144"
serde_json = "1.0.85"
ct-api = { path = "../api" }

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3