[package]
name = "ctsimlibgraphics"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
bevy = "0.8.0"
bevy_rapier2d = { version = "0.19.0", features = [ "debug-render", "enhanced-determinism", "wasm-bindgen" ] }
bevy_prototype_lyon = "0.7.2"

[[bin]]
name = "test"
path = "src/test.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3