[package]
name = "ctsimlibgraphics"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
bevy = "0.11.0"
bevy_rapier2d = { version = "0.22.0", features = [ "debug-render-2d", "enhanced-determinism", "wasm-bindgen" ] }
bevy_prototype_lyon = "0.9.0"
ct-api = { path = "../api" }


[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3