[package]
name = "ctviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
ctsimlibgraphics = { path = "../simulator_graphics" }
ct-api = { path = "../api" }
serde = "1.0.143"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.59", features = [ "Window", "Location" ] }
bevy = "0.11.0"

[[bin]]
name = "ctviewer"
path = "src/main.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"