[package]
name = "worker_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
postgres = "0.19.3"

[[bin]]
name = "ctsim"
path = "src/main.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3