[package]
name = "worker_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
ctsimlib = { path = "../simulator" }
postgres = "0.19.3"
bevy = { version = "0.11.0", default-features = false }
bevy_rapier2d = { version = "0.22.0", features = [ "enhanced-determinism" ] }
serde = "1.0.144"
serde_json = "1.0.85"


[[bin]]
name = "ctsim"
path = "src/main.rs"

[profile.release]
codegen-units = 1

[profile.dev.package.bevy_rapier2d]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3