[package]
name = "ctbuilder"
version = "0.1.0"
edition = "2021"

[dependencies]
ctbuilderlib = { path = "lib" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false
panic = 'abort'
strip = true